# AOC-CPP-Template

./: .gitmodules  LICENCE  README.md  create.sh  run.sh
include/: pch.h
template/: CMakeLists.txt  data.cpp  input.txt  main.cpp  output.txt
